--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
     "build": "parcel build"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "algoliasearch": "^4.24.0",
+    "instantsearch.js": "^4.73.4"
+  },
+  "devDependencies": {
+    "parcel": "^2.12.0"
+  }
 }
